--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.41"
 tracing = "0.1.11"
 tracing-subscriber = "0.1.6"
+url = "2.2.2"
+percent-encoding = "2.1.0"
+
