--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.0.0-rc.8", features = ["cargo", "derive", "std"], default-features = false }
 reqwest = { version = "0.11", features = ["json"] }
+hyper = { version = "0.14.16", features = ["full"] }
 tokio = { version = "1.14.0", features = ["full"] }
 prometheus = { version = "0.13.0", features = ["process"] }
 serde = { version = "1.0.101", features = ["derive"] }
