--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "gman"
 version = "0.1.0"
 authors = ["Nick Pillitteri"]
-description = "Blah blah blah"
+description = "Prometheus metrics exporter for api.weather.gov"
 homepage = "https://github.com/56quarters/gman"
 repository = "https://github.com/56quarters/gman"
 readme = "README.md"
