--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,11 @@ keywords = ["nws", "metrics", "prometheus"]
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.0.0-rc.8", features = ["cargo", "derive", "std"], default-features = false }
+clap = { version = "3.0.14", features = ["cargo", "derive", "std"], default-features = false }
 percent-encoding = "2.1.0"
 prometheus = { version = "0.13.0", features = ["process"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0.101", features = ["derive"] }
-serde_json = "1.0.41"
 tokio = { version = "1.14.0", features = ["full"] }
 tracing = "0.1.11"
 tracing-subscriber = "0.1.6"
