Run systemd service as unprivileged user

--- a/ext/nws_exporter.service
+++ b/ext/nws_exporter.service
@@ -4,6 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
+User=nobody
 ExecStart=/usr/local/bin/nws_exporter --station kbos --log-level debug
 
 CapabilityBoundingSet=
