--- a/ext/nws_exporter.service
+++ b/ext/nws_exporter.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=nobody
-ExecStart=/usr/local/bin/nws_exporter --station kbos --log-level debug
+ExecStart=/usr/local/bin/nws_exporter --station KBOS --log-level debug
 
 CapabilityBoundingSet=
 NoNewPrivileges=yes
