--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 clap = { version = "3.0.14", features = ["cargo", "derive", "std"], default-features = false }
 percent-encoding = "2.1.0"
 prometheus = { version = "0.13.0", features = ["process"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
 serde = { version = "1.0.101", features = ["derive"] }
 tokio = { version = "1.14.0", features = ["full"] }
 tracing = "0.1.11"
