Add support for multiple stations as required argument
Turn `--station` into a positional argument that supports multiple
values to allow fetching forecasts for multiple NWS stations with
the same exporter instance.

Fixes #5

--- a/ext/nws_exporter.service
+++ b/ext/nws_exporter.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=nobody
-ExecStart=/usr/local/bin/nws_exporter --station KBOS --log-level debug
+ExecStart=/usr/local/bin/nws_exporter --log-level=debug KBOS
 
 CapabilityBoundingSet=
 NoNewPrivileges=yes
