--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ axum = "0.6.20"
 clap = { version = "3.0.14", features = ["cargo", "derive", "std"], default-features = false }
 percent-encoding = "2.1.0"
 prometheus-client = "0.21.2"
-reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
 serde = { version = "1.0.101", features = ["derive"] }
 tokio = { version = "1.14.0", features = ["full"] }
-tower-http = {version = "0.4.4", features = ["trace"] }
+tower-http = { version = "0.4.4", features = ["trace"] }
 tracing = "0.1.11"
 tracing-subscriber = "0.3.17"
 
